<resources>
    <string name="app_name">feature_settings_impl</string>
    <string name="tvAccount">"Google account"</string>
    <string name="tvSetGoogleAccount">"Add account"</string>
    <string name="btnLogOut">"Logout"</string>
    <string name="incomingCalls">All incoming</string>
    <string name="outgoingingCalls">All outgoing</string>
    <string name="outgoingingCallsMissed">Unanswered outgoing</string>
    <string name="incomingCallsMissed">Missed incoming</string>
    <string name="text_tv_ringtone">Sound</string>
    <string name="notifications_settings">Notifications</string>
    <string name="tracingParameters">Tracing parameters</string>
    <string name="title_select_ringtone">Choose sound:</string>
    <string name="title_toolbar_settings">Settings</string>
    <string name="content_description_choose_ringtone">Choose a ringtone</string>
    <string name="inscription_ringtone">Ringtone</string>
    <string name="title_messengers">Messengers</string>
    <string name="title_switch_whatsapp">WhatsApp</string>
    <string name="long_alarm">Long alarm</string>
    <string name="title_long_alarm_duration">Repeat the ringtone times</string>
    <string name="title_long_alarm_interval">Interval before the next repeat (min)</string>
    <string name="title_long_alarm_count_of_repeats">Repeat times</string>
    <string name="description_long_alarm_duration">Number of repeats of the set ringtone within the notification</string>
    <string name="description_long_alarm_count_of_repeats">Number of repeats of the missed notification</string>
    <string name="description_long_alarm_interval">The interval between repeats of the missed notification</string>
    <string name="settings_title_silent_ringtone">Silent</string>
    <string name="settings_content_description_google_account">Settings\'section Google Account</string>
    <string name="settings_content_description_messengers">Settings\' section Messengers</string>
    <string name="settings_content_description_notifications">Settings\' section Notifications</string>
    <string name="settings_content_description_long_alarm_duration">Set count of times of playing the set ringtone within the notification.</string>
    <string name="settings_content_description_long_count_of_repeats">Set count of repeats of the notification if the notification is missed</string>
    <string name="settings_content_description_long_interval">Set count of minutes of an interval before the next repeat. It is an interval between repeats of the missed notification</string>
    <string name="settings_content_description_tracing_parameters">A settings\' section Tracing parameters</string>
    <string name="settings_content_description_account">The set account is %s</string>

</resources>
